--- a/packages/dom/test/visual/spec/modifiers/size/main.html
+++ b/packages/dom/test/visual/spec/modifiers/size/main.html
@@ -2,19 +2,24 @@
 
 <link rel="stylesheet" href="../../../styles.css" />
 
-<div id="scroll">
-  <div id="reference">Ref</div>
-  <div id="floating">Float</div>
-</div>
+<style>
+  #floating {
+    height: 100vh;
+    box-sizing: border-box;
+  }
+</style>
+
+<div id="reference">Ref</div>
+<div id="floating">Pop</div>
 
 <script type="module">
-  import {computePosition, hide} from '../../../dist/index.mjs';
+  import {computePosition, size} from '../../../dist/index.mjs';
   import {position, addEventListeners} from '../../../utils.mjs';
 
   addEventListeners(() => {
     computePosition(reference, floating, {
-      placement: 'right',
-      middleware: [hide()],
+      placement: 'bottom',
+      middleware: [size()],
     }).then(position);
   });
 </script>
