--- a/packages/dom/test/visual/spec/rtl.html
+++ b/packages/dom/test/visual/spec/rtl.html
@@ -25,9 +25,9 @@
 
 <script type="module">
   import {computePosition, shift} from '../dist/index.mjs';
-  import {position, updateOnScroll} from '../utils.mjs';
+  import {position, addEventListeners} from '../utils.mjs';
 
-  updateOnScroll(() => {
+  addEventListeners(() => {
     computePosition(reference, floating, {
       placement: 'left',
       middleware: [shift({crossAxis: true})],
