--- a/packages/dom/test/visual/spec/scroll-border.html
+++ b/packages/dom/test/visual/spec/scroll-border.html
@@ -30,9 +30,9 @@
 
 <script type="module">
   import {computePosition, shift} from '../dist/index.mjs';
-  import {position, updateOnScroll} from '../utils.mjs';
+  import {position, addEventListeners} from '../utils.mjs';
 
-  updateOnScroll(() => {
+  addEventListeners(() => {
     computePosition(reference, floating, {
       placement: 'right',
       middleware: [shift()],
