--- a/packages/dom/test/visual/spec/scrolling-fixed/different-scrolling-containers.html
+++ b/packages/dom/test/visual/spec/scrolling-fixed/different-scrolling-containers.html
@@ -18,9 +18,9 @@
 
 <script type="module">
   import {computePosition} from '../../dist/index.mjs';
-  import {position, updateOnScroll} from '../../utils.mjs';
+  import {position, addEventListeners} from '../../utils.mjs';
 
-  updateOnScroll(() => {
+  addEventListeners(() => {
     computePosition(reference, floating, {
       strategy: 'fixed',
       placement: 'right',
