--- a/packages/dom/test/visual/spec/modifiers/shift/padding.html
+++ b/packages/dom/test/visual/spec/modifiers/shift/padding.html
@@ -13,10 +13,12 @@
 
 <script type="module">
   import {computePosition, shift} from '../../../dist/index.mjs';
-  import {position} from '../../../utils.mjs';
+  import {position, addEventListeners} from '../../../utils.mjs';
 
-  computePosition(reference, floating, {
-    placement: 'bottom',
-    middleware: [shift({padding: 5})],
-  }).then(position);
+  addEventListeners(() => {
+    computePosition(reference, floating, {
+      placement: 'bottom',
+      middleware: [shift({padding: 5})],
+    }).then(position);
+  });
 </script>
