feat: wrap arrow middleware to allow ref

--- a/packages/react-dom/test/visual/index.html
+++ b/packages/react-dom/test/visual/index.html
@@ -20,6 +20,12 @@
     padding: 15px;
     width: 500px;
   }
+
+  #arrow {
+    width: 15px;
+    height: 15px;
+    background: yellow;
+  }
 </style>
 
 <div id="root"></div>
